// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultiSelect should render the UI snapshot correctly 1`] = `
<div
  className="css-1xdhyk6"
  id="multiselect-test-id"
  onClick={[Function]}
>
  <div
    className="chakra-accordion css-1xdhyk6"
    data-testid="accordion"
    id="multi-select-accordion-multiselect-test-id"
    onKeyDown={[Function]}
  >
    <div
      className="chakra-accordion__item css-1fsnuue"
    >
      <button
        aria-controls="accordion-panel-multi-select-accordion-multiselect-test-id-item-0"
        aria-expanded={false}
        aria-label="multiselect-button-text, 0 items currently selected"
        className="chakra-accordion__button css-1rvudez"
        disabled={false}
        id="accordion-button-multi-select-accordion-multiselect-test-id-item-0"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        type="button"
      >
        <span
          className="css-1kmgev1"
        >
          <span
            className="css-0"
            title="multiselect-button-text"
          >
            multiselect-button-text
          </span>
        </span>
        <svg
          aria-hidden={true}
          className="chakra-icon accordion-icon css-1b9sovw"
          data-file-name="SvgPlus"
          focusable={false}
          id="multi-select-accordion-multiselect-test-id-icon-0"
          role="img"
          title="plus icon"
        />
      </button>
      <div
        className="chakra-collapse"
        style={
          {
            "display": "none",
            "height": "0px",
            "opacity": 0,
            "overflow": "hidden",
          }
        }
      >
        <div
          aria-labelledby="accordion-button-multi-select-accordion-multiselect-test-id-item-0"
          className="chakra-accordion__panel css-e7ng5h"
          id="accordion-panel-multi-select-accordion-multiselect-test-id-item-0"
          role="region"
        >
          <div
            className="css-79elbk"
          >
            <div
              className="css-p6aqpp"
            >
              <fieldset
                className="css-1u8qly9"
                id="multi-select-checkbox-group-multiselect-test-id-checkbox-group"
              >
                <legend>
                  multiselect-button-text
                </legend>
                <div
                  className="chakra-stack css-19s3t1h"
                  data-testid="checkbox-group"
                  id="multi-select-checkbox-group-multiselect-test-id"
                >
                  <div
                    className="css-1xdhyk6"
                    data-testid="componentWrapper"
                    id="dogs-componentWrapper"
                  >
                    <label
                      className="chakra-checkbox css-1xdhyk6"
                      onClick={[Function]}
                    >
                      <input
                        aria-disabled={false}
                        aria-invalid={false}
                        checked={false}
                        className="chakra-checkbox__input"
                        disabled={false}
                        id="dogs"
                        name="Dogs"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onKeyUp={[Function]}
                        required={false}
                        style={
                          {
                            "border": "0",
                            "clip": "rect(0, 0, 0, 0)",
                            "height": "1px",
                            "margin": "-1px",
                            "overflow": "hidden",
                            "padding": "0",
                            "position": "absolute",
                            "whiteSpace": "nowrap",
                            "width": "1px",
                          }
                        }
                        type="checkbox"
                      />
                      <span
                        aria-hidden={true}
                        className="chakra-checkbox__control css-dnty2r"
                        onMouseDown={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        onMouseUp={[Function]}
                      />
                      <span
                        className="chakra-checkbox__label css-1oeb2oe"
                        onMouseDown={[Function]}
                      >
                        Dogs
                      </span>
                    </label>
                  </div>
                  <div
                    className="css-1xdhyk6"
                    data-testid="componentWrapper"
                    id="cats-componentWrapper"
                  >
                    <label
                      className="chakra-checkbox css-1xdhyk6"
                      onClick={[Function]}
                    >
                      <input
                        aria-disabled={false}
                        aria-invalid={false}
                        checked={false}
                        className="chakra-checkbox__input"
                        disabled={false}
                        id="cats"
                        name="Cats"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onKeyUp={[Function]}
                        required={false}
                        style={
                          {
                            "border": "0",
                            "clip": "rect(0, 0, 0, 0)",
                            "height": "1px",
                            "margin": "-1px",
                            "overflow": "hidden",
                            "padding": "0",
                            "position": "absolute",
                            "whiteSpace": "nowrap",
                            "width": "1px",
                          }
                        }
                        type="checkbox"
                      />
                      <span
                        aria-hidden={true}
                        className="chakra-checkbox__control css-dnty2r"
                        onMouseDown={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        onMouseUp={[Function]}
                      />
                      <span
                        className="chakra-checkbox__label css-1oeb2oe"
                        onMouseDown={[Function]}
                      >
                        Cats
                      </span>
                    </label>
                  </div>
                  <div
                    className="css-1xdhyk6"
                    data-testid="componentWrapper"
                    id="cars-componentWrapper"
                  >
                    <label
                      className="chakra-checkbox css-1xdhyk6"
                      data-disabled=""
                      onClick={[Function]}
                    >
                      <input
                        aria-disabled={true}
                        aria-invalid={false}
                        checked={false}
                        className="chakra-checkbox__input"
                        disabled={true}
                        id="cars"
                        name="Cars"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onKeyUp={[Function]}
                        required={false}
                        style={
                          {
                            "border": "0",
                            "clip": "rect(0, 0, 0, 0)",
                            "height": "1px",
                            "margin": "-1px",
                            "overflow": "hidden",
                            "padding": "0",
                            "position": "absolute",
                            "whiteSpace": "nowrap",
                            "width": "1px",
                          }
                        }
                        type="checkbox"
                      />
                      <span
                        aria-hidden={true}
                        className="chakra-checkbox__control css-dnty2r"
                        data-disabled=""
                        onMouseDown={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        onMouseUp={[Function]}
                      />
                      <span
                        className="chakra-checkbox__label css-1oeb2oe"
                        data-disabled=""
                        onMouseDown={[Function]}
                      >
                        Cars
                      </span>
                    </label>
                  </div>
                  <div
                    className="css-1xdhyk6"
                    data-testid="componentWrapper"
                    id="colors-componentWrapper"
                  >
                    <label
                      className="chakra-checkbox css-1xdhyk6"
                      onClick={[Function]}
                    >
                      <input
                        aria-disabled={false}
                        aria-invalid={false}
                        checked={false}
                        className="chakra-checkbox__input"
                        disabled={false}
                        id="colors"
                        name="Colors"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onKeyUp={[Function]}
                        required={false}
                        style={
                          {
                            "border": "0",
                            "clip": "rect(0, 0, 0, 0)",
                            "height": "1px",
                            "margin": "-1px",
                            "overflow": "hidden",
                            "padding": "0",
                            "position": "absolute",
                            "whiteSpace": "nowrap",
                            "width": "1px",
                          }
                        }
                        type="checkbox"
                      />
                      <span
                        aria-hidden={true}
                        className="chakra-checkbox__control css-dnty2r"
                        onMouseDown={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        onMouseUp={[Function]}
                      />
                      <span
                        className="chakra-checkbox__label css-1oeb2oe"
                        onMouseDown={[Function]}
                      >
                        Colors
                      </span>
                    </label>
                  </div>
                  <div
                    className="css-1xdhyk6"
                    data-testid="componentWrapper"
                    id="red-componentWrapper"
                  >
                    <label
                      className="chakra-checkbox css-vbxw2k"
                      onClick={[Function]}
                    >
                      <input
                        aria-disabled={false}
                        aria-invalid={false}
                        checked={false}
                        className="chakra-checkbox__input"
                        disabled={false}
                        id="red"
                        name="Red"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onKeyUp={[Function]}
                        required={false}
                        style={
                          {
                            "border": "0",
                            "clip": "rect(0, 0, 0, 0)",
                            "height": "1px",
                            "margin": "-1px",
                            "overflow": "hidden",
                            "padding": "0",
                            "position": "absolute",
                            "whiteSpace": "nowrap",
                            "width": "1px",
                          }
                        }
                        type="checkbox"
                      />
                      <span
                        aria-hidden={true}
                        className="chakra-checkbox__control css-dnty2r"
                        onMouseDown={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        onMouseUp={[Function]}
                      />
                      <span
                        className="chakra-checkbox__label css-1oeb2oe"
                        onMouseDown={[Function]}
                      >
                        Red
                      </span>
                    </label>
                  </div>
                  <div
                    className="css-1xdhyk6"
                    data-testid="componentWrapper"
                    id="blue-componentWrapper"
                  >
                    <label
                      className="chakra-checkbox css-vbxw2k"
                      onClick={[Function]}
                    >
                      <input
                        aria-disabled={false}
                        aria-invalid={false}
                        checked={false}
                        className="chakra-checkbox__input"
                        disabled={false}
                        id="blue"
                        name="Blue"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onKeyUp={[Function]}
                        required={false}
                        style={
                          {
                            "border": "0",
                            "clip": "rect(0, 0, 0, 0)",
                            "height": "1px",
                            "margin": "-1px",
                            "overflow": "hidden",
                            "padding": "0",
                            "position": "absolute",
                            "whiteSpace": "nowrap",
                            "width": "1px",
                          }
                        }
                        type="checkbox"
                      />
                      <span
                        aria-hidden={true}
                        className="chakra-checkbox__control css-dnty2r"
                        onMouseDown={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        onMouseUp={[Function]}
                      />
                      <span
                        className="chakra-checkbox__label css-1oeb2oe"
                        onMouseDown={[Function]}
                      >
                        Blue
                      </span>
                    </label>
                  </div>
                  <div
                    className="css-1xdhyk6"
                    data-testid="componentWrapper"
                    id="plants-componentWrapper"
                  >
                    <label
                      className="chakra-checkbox css-1xdhyk6"
                      onClick={[Function]}
                    >
                      <input
                        aria-disabled={false}
                        aria-invalid={false}
                        checked={false}
                        className="chakra-checkbox__input"
                        disabled={false}
                        id="plants"
                        name="Plants"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onKeyUp={[Function]}
                        required={false}
                        style={
                          {
                            "border": "0",
                            "clip": "rect(0, 0, 0, 0)",
                            "height": "1px",
                            "margin": "-1px",
                            "overflow": "hidden",
                            "padding": "0",
                            "position": "absolute",
                            "whiteSpace": "nowrap",
                            "width": "1px",
                          }
                        }
                        type="checkbox"
                      />
                      <span
                        aria-hidden={true}
                        className="chakra-checkbox__control css-dnty2r"
                        onMouseDown={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        onMouseUp={[Function]}
                      />
                      <span
                        className="chakra-checkbox__label css-1oeb2oe"
                        onMouseDown={[Function]}
                      >
                        Plants
                      </span>
                    </label>
                  </div>
                  <div
                    className="css-1xdhyk6"
                    data-testid="componentWrapper"
                    id="furniture-componentWrapper"
                  >
                    <label
                      className="chakra-checkbox css-1xdhyk6"
                      onClick={[Function]}
                    >
                      <input
                        aria-disabled={false}
                        aria-invalid={false}
                        checked={false}
                        className="chakra-checkbox__input"
                        disabled={false}
                        id="furniture"
                        name="Furniture"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onKeyUp={[Function]}
                        required={false}
                        style={
                          {
                            "border": "0",
                            "clip": "rect(0, 0, 0, 0)",
                            "height": "1px",
                            "margin": "-1px",
                            "overflow": "hidden",
                            "padding": "0",
                            "position": "absolute",
                            "whiteSpace": "nowrap",
                            "width": "1px",
                          }
                        }
                        type="checkbox"
                      />
                      <span
                        aria-hidden={true}
                        className="chakra-checkbox__control css-dnty2r"
                        onMouseDown={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        onMouseUp={[Function]}
                      />
                      <span
                        className="chakra-checkbox__label css-1oeb2oe"
                        onMouseDown={[Function]}
                      >
                        Furniture
                      </span>
                    </label>
                  </div>
                </div>
                <div
                  aria-atomic={true}
                  aria-live="polite"
                  className="css-1xdhyk6"
                  data-isinvalid={false}
                  id="multi-select-checkbox-group-multiselect-test-id-helperErrorText"
                >
                  <div
                    className="css-0"
                  />
                </div>
              </fieldset>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MultiSelect should render the UI snapshot correctly 2`] = `
<div
  className="css-1xdhyk6"
  id="multiselect-test-id"
  onClick={[Function]}
>
  <div
    className="chakra-accordion css-1xdhyk6"
    data-testid="accordion"
    id="multi-select-accordion-multiselect-test-id"
    onKeyDown={[Function]}
  >
    <div
      className="chakra-accordion__item css-1fsnuue"
    >
      <button
        aria-controls="accordion-panel-multi-select-accordion-multiselect-test-id-item-0"
        aria-expanded={false}
        aria-label="multiselect-button-text, 0 items currently selected"
        className="chakra-accordion__button css-1rvudez"
        disabled={false}
        id="accordion-button-multi-select-accordion-multiselect-test-id-item-0"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        type="button"
      >
        <span
          className="css-1kmgev1"
        >
          <span
            className="css-0"
            title="multiselect-button-text"
          >
            multiselect-button-text
          </span>
        </span>
        <svg
          aria-hidden={true}
          className="chakra-icon accordion-icon css-1b9sovw"
          data-file-name="SvgPlus"
          focusable={false}
          id="multi-select-accordion-multiselect-test-id-icon-0"
          role="img"
          title="plus icon"
        />
      </button>
      <div
        className="chakra-collapse"
        style={
          {
            "display": "none",
            "height": "0px",
            "opacity": 0,
            "overflow": "hidden",
          }
        }
      >
        <div
          aria-labelledby="accordion-button-multi-select-accordion-multiselect-test-id-item-0"
          className="chakra-accordion__panel css-e7ng5h"
          id="accordion-panel-multi-select-accordion-multiselect-test-id-item-0"
          role="region"
        >
          <div
            className="css-79elbk"
          >
            <div
              className="css-p6aqpp"
            >
              <fieldset
                className="css-1u8qly9"
                id="multi-select-checkbox-group-multiselect-test-id-checkbox-group"
              >
                <legend>
                  multiselect-button-text
                </legend>
                <div
                  className="chakra-stack css-19s3t1h"
                  data-testid="checkbox-group"
                  id="multi-select-checkbox-group-multiselect-test-id"
                >
                  <div
                    className="css-1xdhyk6"
                    data-testid="componentWrapper"
                    id="dogs-componentWrapper"
                  >
                    <label
                      className="chakra-checkbox css-1xdhyk6"
                      onClick={[Function]}
                    >
                      <input
                        aria-disabled={false}
                        aria-invalid={false}
                        checked={false}
                        className="chakra-checkbox__input"
                        disabled={false}
                        id="dogs"
                        name="Dogs"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onKeyUp={[Function]}
                        required={false}
                        style={
                          {
                            "border": "0",
                            "clip": "rect(0, 0, 0, 0)",
                            "height": "1px",
                            "margin": "-1px",
                            "overflow": "hidden",
                            "padding": "0",
                            "position": "absolute",
                            "whiteSpace": "nowrap",
                            "width": "1px",
                          }
                        }
                        type="checkbox"
                      />
                      <span
                        aria-hidden={true}
                        className="chakra-checkbox__control css-dnty2r"
                        onMouseDown={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        onMouseUp={[Function]}
                      />
                      <span
                        className="chakra-checkbox__label css-1oeb2oe"
                        onMouseDown={[Function]}
                      >
                        Dogs
                      </span>
                    </label>
                  </div>
                  <div
                    className="css-1xdhyk6"
                    data-testid="componentWrapper"
                    id="cats-componentWrapper"
                  >
                    <label
                      className="chakra-checkbox css-1xdhyk6"
                      onClick={[Function]}
                    >
                      <input
                        aria-disabled={false}
                        aria-invalid={false}
                        checked={false}
                        className="chakra-checkbox__input"
                        disabled={false}
                        id="cats"
                        name="Cats"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onKeyUp={[Function]}
                        required={false}
                        style={
                          {
                            "border": "0",
                            "clip": "rect(0, 0, 0, 0)",
                            "height": "1px",
                            "margin": "-1px",
                            "overflow": "hidden",
                            "padding": "0",
                            "position": "absolute",
                            "whiteSpace": "nowrap",
                            "width": "1px",
                          }
                        }
                        type="checkbox"
                      />
                      <span
                        aria-hidden={true}
                        className="chakra-checkbox__control css-dnty2r"
                        onMouseDown={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        onMouseUp={[Function]}
                      />
                      <span
                        className="chakra-checkbox__label css-1oeb2oe"
                        onMouseDown={[Function]}
                      >
                        Cats
                      </span>
                    </label>
                  </div>
                  <div
                    className="css-1xdhyk6"
                    data-testid="componentWrapper"
                    id="cars-componentWrapper"
                  >
                    <label
                      className="chakra-checkbox css-1xdhyk6"
                      data-disabled=""
                      onClick={[Function]}
                    >
                      <input
                        aria-disabled={true}
                        aria-invalid={false}
                        checked={false}
                        className="chakra-checkbox__input"
                        disabled={true}
                        id="cars"
                        name="Cars"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onKeyUp={[Function]}
                        required={false}
                        style={
                          {
                            "border": "0",
                            "clip": "rect(0, 0, 0, 0)",
                            "height": "1px",
                            "margin": "-1px",
                            "overflow": "hidden",
                            "padding": "0",
                            "position": "absolute",
                            "whiteSpace": "nowrap",
                            "width": "1px",
                          }
                        }
                        type="checkbox"
                      />
                      <span
                        aria-hidden={true}
                        className="chakra-checkbox__control css-dnty2r"
                        data-disabled=""
                        onMouseDown={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        onMouseUp={[Function]}
                      />
                      <span
                        className="chakra-checkbox__label css-1oeb2oe"
                        data-disabled=""
                        onMouseDown={[Function]}
                      >
                        Cars
                      </span>
                    </label>
                  </div>
                  <div
                    className="css-1xdhyk6"
                    data-testid="componentWrapper"
                    id="colors-componentWrapper"
                  >
                    <label
                      className="chakra-checkbox css-1xdhyk6"
                      onClick={[Function]}
                    >
                      <input
                        aria-disabled={false}
                        aria-invalid={false}
                        checked={false}
                        className="chakra-checkbox__input"
                        disabled={false}
                        id="colors"
                        name="Colors"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onKeyUp={[Function]}
                        required={false}
                        style={
                          {
                            "border": "0",
                            "clip": "rect(0, 0, 0, 0)",
                            "height": "1px",
                            "margin": "-1px",
                            "overflow": "hidden",
                            "padding": "0",
                            "position": "absolute",
                            "whiteSpace": "nowrap",
                            "width": "1px",
                          }
                        }
                        type="checkbox"
                      />
                      <span
                        aria-hidden={true}
                        className="chakra-checkbox__control css-dnty2r"
                        onMouseDown={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        onMouseUp={[Function]}
                      />
                      <span
                        className="chakra-checkbox__label css-1oeb2oe"
                        onMouseDown={[Function]}
                      >
                        Colors
                      </span>
                    </label>
                  </div>
                  <div
                    className="css-1xdhyk6"
                    data-testid="componentWrapper"
                    id="red-componentWrapper"
                  >
                    <label
                      className="chakra-checkbox css-vbxw2k"
                      onClick={[Function]}
                    >
                      <input
                        aria-disabled={false}
                        aria-invalid={false}
                        checked={false}
                        className="chakra-checkbox__input"
                        disabled={false}
                        id="red"
                        name="Red"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onKeyUp={[Function]}
                        required={false}
                        style={
                          {
                            "border": "0",
                            "clip": "rect(0, 0, 0, 0)",
                            "height": "1px",
                            "margin": "-1px",
                            "overflow": "hidden",
                            "padding": "0",
                            "position": "absolute",
                            "whiteSpace": "nowrap",
                            "width": "1px",
                          }
                        }
                        type="checkbox"
                      />
                      <span
                        aria-hidden={true}
                        className="chakra-checkbox__control css-dnty2r"
                        onMouseDown={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        onMouseUp={[Function]}
                      />
                      <span
                        className="chakra-checkbox__label css-1oeb2oe"
                        onMouseDown={[Function]}
                      >
                        Red
                      </span>
                    </label>
                  </div>
                  <div
                    className="css-1xdhyk6"
                    data-testid="componentWrapper"
                    id="blue-componentWrapper"
                  >
                    <label
                      className="chakra-checkbox css-vbxw2k"
                      onClick={[Function]}
                    >
                      <input
                        aria-disabled={false}
                        aria-invalid={false}
                        checked={false}
                        className="chakra-checkbox__input"
                        disabled={false}
                        id="blue"
                        name="Blue"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onKeyUp={[Function]}
                        required={false}
                        style={
                          {
                            "border": "0",
                            "clip": "rect(0, 0, 0, 0)",
                            "height": "1px",
                            "margin": "-1px",
                            "overflow": "hidden",
                            "padding": "0",
                            "position": "absolute",
                            "whiteSpace": "nowrap",
                            "width": "1px",
                          }
                        }
                        type="checkbox"
                      />
                      <span
                        aria-hidden={true}
                        className="chakra-checkbox__control css-dnty2r"
                        onMouseDown={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        onMouseUp={[Function]}
                      />
                      <span
                        className="chakra-checkbox__label css-1oeb2oe"
                        onMouseDown={[Function]}
                      >
                        Blue
                      </span>
                    </label>
                  </div>
                  <div
                    className="css-1xdhyk6"
                    data-testid="componentWrapper"
                    id="plants-componentWrapper"
                  >
                    <label
                      className="chakra-checkbox css-1xdhyk6"
                      onClick={[Function]}
                    >
                      <input
                        aria-disabled={false}
                        aria-invalid={false}
                        checked={false}
                        className="chakra-checkbox__input"
                        disabled={false}
                        id="plants"
                        name="Plants"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onKeyUp={[Function]}
                        required={false}
                        style={
                          {
                            "border": "0",
                            "clip": "rect(0, 0, 0, 0)",
                            "height": "1px",
                            "margin": "-1px",
                            "overflow": "hidden",
                            "padding": "0",
                            "position": "absolute",
                            "whiteSpace": "nowrap",
                            "width": "1px",
                          }
                        }
                        type="checkbox"
                      />
                      <span
                        aria-hidden={true}
                        className="chakra-checkbox__control css-dnty2r"
                        onMouseDown={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        onMouseUp={[Function]}
                      />
                      <span
                        className="chakra-checkbox__label css-1oeb2oe"
                        onMouseDown={[Function]}
                      >
                        Plants
                      </span>
                    </label>
                  </div>
                  <div
                    className="css-1xdhyk6"
                    data-testid="componentWrapper"
                    id="furniture-componentWrapper"
                  >
                    <label
                      className="chakra-checkbox css-1xdhyk6"
                      onClick={[Function]}
                    >
                      <input
                        aria-disabled={false}
                        aria-invalid={false}
                        checked={false}
                        className="chakra-checkbox__input"
                        disabled={false}
                        id="furniture"
                        name="Furniture"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onKeyUp={[Function]}
                        required={false}
                        style={
                          {
                            "border": "0",
                            "clip": "rect(0, 0, 0, 0)",
                            "height": "1px",
                            "margin": "-1px",
                            "overflow": "hidden",
                            "padding": "0",
                            "position": "absolute",
                            "whiteSpace": "nowrap",
                            "width": "1px",
                          }
                        }
                        type="checkbox"
                      />
                      <span
                        aria-hidden={true}
                        className="chakra-checkbox__control css-dnty2r"
                        onMouseDown={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        onMouseUp={[Function]}
                      />
                      <span
                        className="chakra-checkbox__label css-1oeb2oe"
                        onMouseDown={[Function]}
                      >
                        Furniture
                      </span>
                    </label>
                  </div>
                </div>
                <div
                  aria-atomic={true}
                  aria-live="polite"
                  className="css-1xdhyk6"
                  data-isinvalid={false}
                  id="multi-select-checkbox-group-multiselect-test-id-helperErrorText"
                >
                  <div
                    className="css-0"
                  />
                </div>
              </fieldset>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MultiSelect should render the UI snapshot correctly 3`] = `
<div
  className="css-1xdhyk6"
  id="multiselect-test-id"
  onClick={[Function]}
>
  <div
    className="chakra-accordion css-1xdhyk6"
    data-testid="accordion"
    id="multi-select-accordion-multiselect-test-id"
    onKeyDown={[Function]}
  >
    <div
      className="chakra-accordion__item css-1fsnuue"
    >
      <button
        aria-controls="accordion-panel-multi-select-accordion-multiselect-test-id-item-0"
        aria-expanded={false}
        aria-label="multiselect-button-text, 1 item currently selected"
        className="chakra-accordion__button css-1rvudez"
        disabled={false}
        id="accordion-button-multi-select-accordion-multiselect-test-id-item-0"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        type="button"
      >
        <span
          className="css-1kmgev1"
        >
          <span
            className="css-0"
            title="multiselect-button-text"
          >
            multiselect-button-text
          </span>
        </span>
        <svg
          aria-hidden={true}
          className="chakra-icon accordion-icon css-1b9sovw"
          data-file-name="SvgPlus"
          focusable={false}
          id="multi-select-accordion-multiselect-test-id-icon-0"
          role="img"
          title="plus icon"
        />
      </button>
      <div
        className="chakra-collapse"
        style={
          {
            "display": "none",
            "height": "0px",
            "opacity": 0,
            "overflow": "hidden",
          }
        }
      >
        <div
          aria-labelledby="accordion-button-multi-select-accordion-multiselect-test-id-item-0"
          className="chakra-accordion__panel css-e7ng5h"
          id="accordion-panel-multi-select-accordion-multiselect-test-id-item-0"
          role="region"
        >
          <div
            className="css-79elbk"
          >
            <div
              className="css-p6aqpp"
            >
              <fieldset
                className="css-1u8qly9"
                id="multi-select-checkbox-group-multiselect-test-id-checkbox-group"
              >
                <legend>
                  multiselect-button-text
                </legend>
                <div
                  className="chakra-stack css-19s3t1h"
                  data-testid="checkbox-group"
                  id="multi-select-checkbox-group-multiselect-test-id"
                >
                  <div
                    className="css-1xdhyk6"
                    data-testid="componentWrapper"
                    id="dogs-componentWrapper"
                  >
                    <label
                      className="chakra-checkbox css-1xdhyk6"
                      onClick={[Function]}
                    >
                      <input
                        aria-disabled={false}
                        aria-invalid={false}
                        checked={false}
                        className="chakra-checkbox__input"
                        disabled={false}
                        id="dogs"
                        name="Dogs"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onKeyUp={[Function]}
                        required={false}
                        style={
                          {
                            "border": "0",
                            "clip": "rect(0, 0, 0, 0)",
                            "height": "1px",
                            "margin": "-1px",
                            "overflow": "hidden",
                            "padding": "0",
                            "position": "absolute",
                            "whiteSpace": "nowrap",
                            "width": "1px",
                          }
                        }
                        type="checkbox"
                      />
                      <span
                        aria-hidden={true}
                        className="chakra-checkbox__control css-dnty2r"
                        onMouseDown={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        onMouseUp={[Function]}
                      />
                      <span
                        className="chakra-checkbox__label css-1oeb2oe"
                        onMouseDown={[Function]}
                      >
                        Dogs
                      </span>
                    </label>
                  </div>
                  <div
                    className="css-1xdhyk6"
                    data-testid="componentWrapper"
                    id="cats-componentWrapper"
                  >
                    <label
                      className="chakra-checkbox css-1xdhyk6"
                      onClick={[Function]}
                    >
                      <input
                        aria-disabled={false}
                        aria-invalid={false}
                        checked={false}
                        className="chakra-checkbox__input"
                        disabled={false}
                        id="cats"
                        name="Cats"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onKeyUp={[Function]}
                        required={false}
                        style={
                          {
                            "border": "0",
                            "clip": "rect(0, 0, 0, 0)",
                            "height": "1px",
                            "margin": "-1px",
                            "overflow": "hidden",
                            "padding": "0",
                            "position": "absolute",
                            "whiteSpace": "nowrap",
                            "width": "1px",
                          }
                        }
                        type="checkbox"
                      />
                      <span
                        aria-hidden={true}
                        className="chakra-checkbox__control css-dnty2r"
                        onMouseDown={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        onMouseUp={[Function]}
                      />
                      <span
                        className="chakra-checkbox__label css-1oeb2oe"
                        onMouseDown={[Function]}
                      >
                        Cats
                      </span>
                    </label>
                  </div>
                  <div
                    className="css-1xdhyk6"
                    data-testid="componentWrapper"
                    id="cars-componentWrapper"
                  >
                    <label
                      className="chakra-checkbox css-1xdhyk6"
                      data-disabled=""
                      onClick={[Function]}
                    >
                      <input
                        aria-disabled={true}
                        aria-invalid={false}
                        checked={false}
                        className="chakra-checkbox__input"
                        disabled={true}
                        id="cars"
                        name="Cars"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onKeyUp={[Function]}
                        required={false}
                        style={
                          {
                            "border": "0",
                            "clip": "rect(0, 0, 0, 0)",
                            "height": "1px",
                            "margin": "-1px",
                            "overflow": "hidden",
                            "padding": "0",
                            "position": "absolute",
                            "whiteSpace": "nowrap",
                            "width": "1px",
                          }
                        }
                        type="checkbox"
                      />
                      <span
                        aria-hidden={true}
                        className="chakra-checkbox__control css-dnty2r"
                        data-disabled=""
                        onMouseDown={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        onMouseUp={[Function]}
                      />
                      <span
                        className="chakra-checkbox__label css-1oeb2oe"
                        data-disabled=""
                        onMouseDown={[Function]}
                      >
                        Cars
                      </span>
                    </label>
                  </div>
                  <div
                    className="css-1xdhyk6"
                    data-testid="componentWrapper"
                    id="colors-componentWrapper"
                  >
                    <label
                      className="chakra-checkbox css-1xdhyk6"
                      onClick={[Function]}
                    >
                      <input
                        aria-disabled={false}
                        aria-invalid={false}
                        checked={false}
                        className="chakra-checkbox__input"
                        disabled={false}
                        id="colors"
                        name="Colors"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onKeyUp={[Function]}
                        required={false}
                        style={
                          {
                            "border": "0",
                            "clip": "rect(0, 0, 0, 0)",
                            "height": "1px",
                            "margin": "-1px",
                            "overflow": "hidden",
                            "padding": "0",
                            "position": "absolute",
                            "whiteSpace": "nowrap",
                            "width": "1px",
                          }
                        }
                        type="checkbox"
                      />
                      <span
                        aria-hidden={true}
                        className="chakra-checkbox__control css-dnty2r"
                        data-indeterminate=""
                        onMouseDown={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        onMouseUp={[Function]}
                      >
                        <div
                          className="css-0"
                          style={
                            {
                              "alignItems": "center",
                              "display": "flex",
                              "height": "100%",
                              "justifyContent": "center",
                            }
                          }
                        >
                          <svg
                            className="css-1w6vdd7"
                            style={
                              {
                                "stroke": "currentColor",
                                "strokeWidth": 4,
                              }
                            }
                            viewBox="0 0 24 24"
                          >
                            <line
                              x1="21"
                              x2="3"
                              y1="12"
                              y2="12"
                            />
                          </svg>
                        </div>
                      </span>
                      <span
                        className="chakra-checkbox__label css-1oeb2oe"
                        onMouseDown={[Function]}
                      >
                        Colors
                      </span>
                    </label>
                  </div>
                  <div
                    className="css-1xdhyk6"
                    data-testid="componentWrapper"
                    id="red-componentWrapper"
                  >
                    <label
                      className="chakra-checkbox css-vbxw2k"
                      data-checked=""
                      onClick={[Function]}
                    >
                      <input
                        aria-disabled={false}
                        aria-invalid={false}
                        checked={true}
                        className="chakra-checkbox__input"
                        disabled={false}
                        id="red"
                        name="Red"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onKeyUp={[Function]}
                        required={false}
                        style={
                          {
                            "border": "0",
                            "clip": "rect(0, 0, 0, 0)",
                            "height": "1px",
                            "margin": "-1px",
                            "overflow": "hidden",
                            "padding": "0",
                            "position": "absolute",
                            "whiteSpace": "nowrap",
                            "width": "1px",
                          }
                        }
                        type="checkbox"
                      />
                      <span
                        aria-hidden={true}
                        className="chakra-checkbox__control css-dnty2r"
                        data-checked=""
                        onMouseDown={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        onMouseUp={[Function]}
                      >
                        <svg
                          aria-hidden={true}
                          className="chakra-icon css-12vjkgh"
                          data-file-name="SvgUtilityCheck"
                          focusable={false}
                          role="img"
                          title="utilityCheck icon"
                        />
                      </span>
                      <span
                        className="chakra-checkbox__label css-1oeb2oe"
                        data-checked=""
                        onMouseDown={[Function]}
                      >
                        Red
                      </span>
                    </label>
                  </div>
                  <div
                    className="css-1xdhyk6"
                    data-testid="componentWrapper"
                    id="blue-componentWrapper"
                  >
                    <label
                      className="chakra-checkbox css-vbxw2k"
                      onClick={[Function]}
                    >
                      <input
                        aria-disabled={false}
                        aria-invalid={false}
                        checked={false}
                        className="chakra-checkbox__input"
                        disabled={false}
                        id="blue"
                        name="Blue"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onKeyUp={[Function]}
                        required={false}
                        style={
                          {
                            "border": "0",
                            "clip": "rect(0, 0, 0, 0)",
                            "height": "1px",
                            "margin": "-1px",
                            "overflow": "hidden",
                            "padding": "0",
                            "position": "absolute",
                            "whiteSpace": "nowrap",
                            "width": "1px",
                          }
                        }
                        type="checkbox"
                      />
                      <span
                        aria-hidden={true}
                        className="chakra-checkbox__control css-dnty2r"
                        onMouseDown={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        onMouseUp={[Function]}
                      />
                      <span
                        className="chakra-checkbox__label css-1oeb2oe"
                        onMouseDown={[Function]}
                      >
                        Blue
                      </span>
                    </label>
                  </div>
                  <div
                    className="css-1xdhyk6"
                    data-testid="componentWrapper"
                    id="plants-componentWrapper"
                  >
                    <label
                      className="chakra-checkbox css-1xdhyk6"
                      onClick={[Function]}
                    >
                      <input
                        aria-disabled={false}
                        aria-invalid={false}
                        checked={false}
                        className="chakra-checkbox__input"
                        disabled={false}
                        id="plants"
                        name="Plants"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onKeyUp={[Function]}
                        required={false}
                        style={
                          {
                            "border": "0",
                            "clip": "rect(0, 0, 0, 0)",
                            "height": "1px",
                            "margin": "-1px",
                            "overflow": "hidden",
                            "padding": "0",
                            "position": "absolute",
                            "whiteSpace": "nowrap",
                            "width": "1px",
                          }
                        }
                        type="checkbox"
                      />
                      <span
                        aria-hidden={true}
                        className="chakra-checkbox__control css-dnty2r"
                        onMouseDown={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        onMouseUp={[Function]}
                      />
                      <span
                        className="chakra-checkbox__label css-1oeb2oe"
                        onMouseDown={[Function]}
                      >
                        Plants
                      </span>
                    </label>
                  </div>
                  <div
                    className="css-1xdhyk6"
                    data-testid="componentWrapper"
                    id="furniture-componentWrapper"
                  >
                    <label
                      className="chakra-checkbox css-1xdhyk6"
                      onClick={[Function]}
                    >
                      <input
                        aria-disabled={false}
                        aria-invalid={false}
                        checked={false}
                        className="chakra-checkbox__input"
                        disabled={false}
                        id="furniture"
                        name="Furniture"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onKeyUp={[Function]}
                        required={false}
                        style={
                          {
                            "border": "0",
                            "clip": "rect(0, 0, 0, 0)",
                            "height": "1px",
                            "margin": "-1px",
                            "overflow": "hidden",
                            "padding": "0",
                            "position": "absolute",
                            "whiteSpace": "nowrap",
                            "width": "1px",
                          }
                        }
                        type="checkbox"
                      />
                      <span
                        aria-hidden={true}
                        className="chakra-checkbox__control css-dnty2r"
                        onMouseDown={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        onMouseUp={[Function]}
                      />
                      <span
                        className="chakra-checkbox__label css-1oeb2oe"
                        onMouseDown={[Function]}
                      >
                        Furniture
                      </span>
                    </label>
                  </div>
                </div>
                <div
                  aria-atomic={true}
                  aria-live="polite"
                  className="css-1xdhyk6"
                  data-isinvalid={false}
                  id="multi-select-checkbox-group-multiselect-test-id-helperErrorText"
                >
                  <div
                    className="css-0"
                  />
                </div>
              </fieldset>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    aria-label="remove 1 item selected from multiselect-button-text"
    className="chakra-button css-8bx9xp"
    data-testid="multi-select-close-button-testid"
    id="ms-count-button-multiselect-test-id"
    onClick={[Function]}
    type="button"
  >
    1
    <svg
      aria-hidden={true}
      className="chakra-icon css-11gz21w"
      data-file-name="SvgClose"
      focusable={false}
      id="ms-count-icon-multiselect-test-id"
      role="img"
      title="Remove selected items"
    />
  </button>
</div>
`;

exports[`MultiSelect should render the UI snapshot correctly 4`] = `
<div
  className="css-1xdhyk6"
  id="multiselect-test-id"
  onClick={[Function]}
>
  <div
    className="chakra-accordion css-1xdhyk6"
    data-testid="accordion"
    id="multi-select-accordion-multiselect-test-id"
    onKeyDown={[Function]}
  >
    <div
      className="chakra-accordion__item css-1fsnuue"
    >
      <button
        aria-controls="accordion-panel-multi-select-accordion-multiselect-test-id-item-0"
        aria-expanded={false}
        aria-label="multiselect-button-text, 2 items currently selected"
        className="chakra-accordion__button css-1rvudez"
        disabled={false}
        id="accordion-button-multi-select-accordion-multiselect-test-id-item-0"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        type="button"
      >
        <span
          className="css-1kmgev1"
        >
          <span
            className="css-0"
            title="multiselect-button-text"
          >
            multiselect-button-text
          </span>
        </span>
        <svg
          aria-hidden={true}
          className="chakra-icon accordion-icon css-1b9sovw"
          data-file-name="SvgPlus"
          focusable={false}
          id="multi-select-accordion-multiselect-test-id-icon-0"
          role="img"
          title="plus icon"
        />
      </button>
      <div
        className="chakra-collapse"
        style={
          {
            "display": "none",
            "height": "0px",
            "opacity": 0,
            "overflow": "hidden",
          }
        }
      >
        <div
          aria-labelledby="accordion-button-multi-select-accordion-multiselect-test-id-item-0"
          className="chakra-accordion__panel css-e7ng5h"
          id="accordion-panel-multi-select-accordion-multiselect-test-id-item-0"
          role="region"
        >
          <div
            className="css-79elbk"
          >
            <div
              className="css-p6aqpp"
            >
              <fieldset
                className="css-1u8qly9"
                id="multi-select-checkbox-group-multiselect-test-id-checkbox-group"
              >
                <legend>
                  multiselect-button-text
                </legend>
                <div
                  className="chakra-stack css-19s3t1h"
                  data-testid="checkbox-group"
                  id="multi-select-checkbox-group-multiselect-test-id"
                >
                  <div
                    className="css-1xdhyk6"
                    data-testid="componentWrapper"
                    id="dogs-componentWrapper"
                  >
                    <label
                      className="chakra-checkbox css-1xdhyk6"
                      onClick={[Function]}
                    >
                      <input
                        aria-disabled={false}
                        aria-invalid={false}
                        checked={false}
                        className="chakra-checkbox__input"
                        disabled={false}
                        id="dogs"
                        name="Dogs"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onKeyUp={[Function]}
                        required={false}
                        style={
                          {
                            "border": "0",
                            "clip": "rect(0, 0, 0, 0)",
                            "height": "1px",
                            "margin": "-1px",
                            "overflow": "hidden",
                            "padding": "0",
                            "position": "absolute",
                            "whiteSpace": "nowrap",
                            "width": "1px",
                          }
                        }
                        type="checkbox"
                      />
                      <span
                        aria-hidden={true}
                        className="chakra-checkbox__control css-dnty2r"
                        onMouseDown={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        onMouseUp={[Function]}
                      />
                      <span
                        className="chakra-checkbox__label css-1oeb2oe"
                        onMouseDown={[Function]}
                      >
                        Dogs
                      </span>
                    </label>
                  </div>
                  <div
                    className="css-1xdhyk6"
                    data-testid="componentWrapper"
                    id="cats-componentWrapper"
                  >
                    <label
                      className="chakra-checkbox css-1xdhyk6"
                      onClick={[Function]}
                    >
                      <input
                        aria-disabled={false}
                        aria-invalid={false}
                        checked={false}
                        className="chakra-checkbox__input"
                        disabled={false}
                        id="cats"
                        name="Cats"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onKeyUp={[Function]}
                        required={false}
                        style={
                          {
                            "border": "0",
                            "clip": "rect(0, 0, 0, 0)",
                            "height": "1px",
                            "margin": "-1px",
                            "overflow": "hidden",
                            "padding": "0",
                            "position": "absolute",
                            "whiteSpace": "nowrap",
                            "width": "1px",
                          }
                        }
                        type="checkbox"
                      />
                      <span
                        aria-hidden={true}
                        className="chakra-checkbox__control css-dnty2r"
                        onMouseDown={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        onMouseUp={[Function]}
                      />
                      <span
                        className="chakra-checkbox__label css-1oeb2oe"
                        onMouseDown={[Function]}
                      >
                        Cats
                      </span>
                    </label>
                  </div>
                  <div
                    className="css-1xdhyk6"
                    data-testid="componentWrapper"
                    id="cars-componentWrapper"
                  >
                    <label
                      className="chakra-checkbox css-1xdhyk6"
                      data-disabled=""
                      onClick={[Function]}
                    >
                      <input
                        aria-disabled={true}
                        aria-invalid={false}
                        checked={false}
                        className="chakra-checkbox__input"
                        disabled={true}
                        id="cars"
                        name="Cars"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onKeyUp={[Function]}
                        required={false}
                        style={
                          {
                            "border": "0",
                            "clip": "rect(0, 0, 0, 0)",
                            "height": "1px",
                            "margin": "-1px",
                            "overflow": "hidden",
                            "padding": "0",
                            "position": "absolute",
                            "whiteSpace": "nowrap",
                            "width": "1px",
                          }
                        }
                        type="checkbox"
                      />
                      <span
                        aria-hidden={true}
                        className="chakra-checkbox__control css-dnty2r"
                        data-disabled=""
                        onMouseDown={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        onMouseUp={[Function]}
                      />
                      <span
                        className="chakra-checkbox__label css-1oeb2oe"
                        data-disabled=""
                        onMouseDown={[Function]}
                      >
                        Cars
                      </span>
                    </label>
                  </div>
                  <div
                    className="css-1xdhyk6"
                    data-testid="componentWrapper"
                    id="colors-componentWrapper"
                  >
                    <label
                      className="chakra-checkbox css-1xdhyk6"
                      data-checked=""
                      onClick={[Function]}
                    >
                      <input
                        aria-disabled={false}
                        aria-invalid={false}
                        checked={true}
                        className="chakra-checkbox__input"
                        disabled={false}
                        id="colors"
                        name="Colors"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onKeyUp={[Function]}
                        required={false}
                        style={
                          {
                            "border": "0",
                            "clip": "rect(0, 0, 0, 0)",
                            "height": "1px",
                            "margin": "-1px",
                            "overflow": "hidden",
                            "padding": "0",
                            "position": "absolute",
                            "whiteSpace": "nowrap",
                            "width": "1px",
                          }
                        }
                        type="checkbox"
                      />
                      <span
                        aria-hidden={true}
                        className="chakra-checkbox__control css-dnty2r"
                        data-checked=""
                        onMouseDown={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        onMouseUp={[Function]}
                      >
                        <svg
                          aria-hidden={true}
                          className="chakra-icon css-12vjkgh"
                          data-file-name="SvgUtilityCheck"
                          focusable={false}
                          role="img"
                          title="utilityCheck icon"
                        />
                      </span>
                      <span
                        className="chakra-checkbox__label css-1oeb2oe"
                        data-checked=""
                        onMouseDown={[Function]}
                      >
                        Colors
                      </span>
                    </label>
                  </div>
                  <div
                    className="css-1xdhyk6"
                    data-testid="componentWrapper"
                    id="red-componentWrapper"
                  >
                    <label
                      className="chakra-checkbox css-vbxw2k"
                      data-checked=""
                      onClick={[Function]}
                    >
                      <input
                        aria-disabled={false}
                        aria-invalid={false}
                        checked={true}
                        className="chakra-checkbox__input"
                        disabled={false}
                        id="red"
                        name="Red"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onKeyUp={[Function]}
                        required={false}
                        style={
                          {
                            "border": "0",
                            "clip": "rect(0, 0, 0, 0)",
                            "height": "1px",
                            "margin": "-1px",
                            "overflow": "hidden",
                            "padding": "0",
                            "position": "absolute",
                            "whiteSpace": "nowrap",
                            "width": "1px",
                          }
                        }
                        type="checkbox"
                      />
                      <span
                        aria-hidden={true}
                        className="chakra-checkbox__control css-dnty2r"
                        data-checked=""
                        onMouseDown={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        onMouseUp={[Function]}
                      >
                        <svg
                          aria-hidden={true}
                          className="chakra-icon css-12vjkgh"
                          data-file-name="SvgUtilityCheck"
                          focusable={false}
                          role="img"
                          title="utilityCheck icon"
                        />
                      </span>
                      <span
                        className="chakra-checkbox__label css-1oeb2oe"
                        data-checked=""
                        onMouseDown={[Function]}
                      >
                        Red
                      </span>
                    </label>
                  </div>
                  <div
                    className="css-1xdhyk6"
                    data-testid="componentWrapper"
                    id="blue-componentWrapper"
                  >
                    <label
                      className="chakra-checkbox css-vbxw2k"
                      data-checked=""
                      onClick={[Function]}
                    >
                      <input
                        aria-disabled={false}
                        aria-invalid={false}
                        checked={true}
                        className="chakra-checkbox__input"
                        disabled={false}
                        id="blue"
                        name="Blue"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onKeyUp={[Function]}
                        required={false}
                        style={
                          {
                            "border": "0",
                            "clip": "rect(0, 0, 0, 0)",
                            "height": "1px",
                            "margin": "-1px",
                            "overflow": "hidden",
                            "padding": "0",
                            "position": "absolute",
                            "whiteSpace": "nowrap",
                            "width": "1px",
                          }
                        }
                        type="checkbox"
                      />
                      <span
                        aria-hidden={true}
                        className="chakra-checkbox__control css-dnty2r"
                        data-checked=""
                        onMouseDown={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        onMouseUp={[Function]}
                      >
                        <svg
                          aria-hidden={true}
                          className="chakra-icon css-12vjkgh"
                          data-file-name="SvgUtilityCheck"
                          focusable={false}
                          role="img"
                          title="utilityCheck icon"
                        />
                      </span>
                      <span
                        className="chakra-checkbox__label css-1oeb2oe"
                        data-checked=""
                        onMouseDown={[Function]}
                      >
                        Blue
                      </span>
                    </label>
                  </div>
                  <div
                    className="css-1xdhyk6"
                    data-testid="componentWrapper"
                    id="plants-componentWrapper"
                  >
                    <label
                      className="chakra-checkbox css-1xdhyk6"
                      onClick={[Function]}
                    >
                      <input
                        aria-disabled={false}
                        aria-invalid={false}
                        checked={false}
                        className="chakra-checkbox__input"
                        disabled={false}
                        id="plants"
                        name="Plants"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onKeyUp={[Function]}
                        required={false}
                        style={
                          {
                            "border": "0",
                            "clip": "rect(0, 0, 0, 0)",
                            "height": "1px",
                            "margin": "-1px",
                            "overflow": "hidden",
                            "padding": "0",
                            "position": "absolute",
                            "whiteSpace": "nowrap",
                            "width": "1px",
                          }
                        }
                        type="checkbox"
                      />
                      <span
                        aria-hidden={true}
                        className="chakra-checkbox__control css-dnty2r"
                        onMouseDown={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        onMouseUp={[Function]}
                      />
                      <span
                        className="chakra-checkbox__label css-1oeb2oe"
                        onMouseDown={[Function]}
                      >
                        Plants
                      </span>
                    </label>
                  </div>
                  <div
                    className="css-1xdhyk6"
                    data-testid="componentWrapper"
                    id="furniture-componentWrapper"
                  >
                    <label
                      className="chakra-checkbox css-1xdhyk6"
                      onClick={[Function]}
                    >
                      <input
                        aria-disabled={false}
                        aria-invalid={false}
                        checked={false}
                        className="chakra-checkbox__input"
                        disabled={false}
                        id="furniture"
                        name="Furniture"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onKeyUp={[Function]}
                        required={false}
                        style={
                          {
                            "border": "0",
                            "clip": "rect(0, 0, 0, 0)",
                            "height": "1px",
                            "margin": "-1px",
                            "overflow": "hidden",
                            "padding": "0",
                            "position": "absolute",
                            "whiteSpace": "nowrap",
                            "width": "1px",
                          }
                        }
                        type="checkbox"
                      />
                      <span
                        aria-hidden={true}
                        className="chakra-checkbox__control css-dnty2r"
                        onMouseDown={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        onMouseUp={[Function]}
                      />
                      <span
                        className="chakra-checkbox__label css-1oeb2oe"
                        onMouseDown={[Function]}
                      >
                        Furniture
                      </span>
                    </label>
                  </div>
                </div>
                <div
                  aria-atomic={true}
                  aria-live="polite"
                  className="css-1xdhyk6"
                  data-isinvalid={false}
                  id="multi-select-checkbox-group-multiselect-test-id-helperErrorText"
                >
                  <div
                    className="css-0"
                  />
                </div>
              </fieldset>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    aria-label="remove 2 items selected from multiselect-button-text"
    className="chakra-button css-8bx9xp"
    data-testid="multi-select-close-button-testid"
    id="ms-count-button-multiselect-test-id"
    onClick={[Function]}
    type="button"
  >
    2
    <svg
      aria-hidden={true}
      className="chakra-icon css-11gz21w"
      data-file-name="SvgClose"
      focusable={false}
      id="ms-count-icon-multiselect-test-id"
      role="img"
      title="Remove selected items"
    />
  </button>
</div>
`;
